✍️ Festa.io 이외의 채널의 상세항목 추가
Festa.io 이외의 채널의 경우 별도로 미리 이미지와 링크를 수작업으로 추가했다.

--- a/2018/1125/1125_안드로이드_컨퍼런스우리는_안드로이드_개발자입니다.md
+++ b/2018/1125/1125_안드로이드_컨퍼런스우리는_안드로이드_개발자입니다.md
@@ -4,12 +4,12 @@
 
 - ⏰ 일시 : 2018. 11. 25 (일)
 - 💁 주최 : 박상권
-- ⛳ 장소 : 
-- 🔗 링크 : 
+- ⛳ 장소 : 마루180
+- 🔗 링크 : https://event-us.kr/ted/event/3700
 
 ## 👏 총평 
 
-- ㅁ
+- 안드로이드 실무에서만 배울수 있는 것들을 많이 접할 수 있었던 행사. 
 
 ## 📸 인증샷
 
