--- a/2019/0226/0226_면접왕_김지디지.md
+++ b/2019/0226/0226_면접왕_김지디지.md
@@ -4,8 +4,8 @@
 
 - ⏰ 일시 : 2019. 02. 26 (화)
 - 💁 주최 : GDG Seoul
-- ⛳ 장소 : 
-- 🔗 링크 : 
+- ⛳ 장소 : 메가존클라우드
+- 🔗 링크 : https://www.meetup.com/ko-KR/GDG-Seoul/events/259058516/
 
 ## 👏 총평 
 
