--- a/2019/0524/0524_코리아_핀테크_위크_2019.md
+++ b/2019/0524/0524_코리아_핀테크_위크_2019.md
@@ -4,13 +4,18 @@
 
 - ⏰ 일시 : 2019. 05. 24 (금)
 - 💁 주최 : 한국핀테크지원센터
-- ⛳ 장소 : 
-- 🔗 링크 : 
+- ⛳ 장소 : 동대문디자인플라자(DDP)
+- 🔗 링크 : http://fintechweek.or.kr/2019/
 
 ## 👏 총평 
 
-- ㅁ
+- 국내 핀테크업계의 동향, 특히 금융샌드박스규제에 대해 많이 알아볼 수 있는 기회였다.
+- 생각보다 핀테크 스타트업이 많이 늘어났고 일부는 정말 성장가능성이 보이기도 했다.
 
 ## 📸 인증샷
 
 ![인증샷](self.png)
+
+## 메모
+
+  
