--- a/2019/0804/0804_안드로이드_컨퍼런스우리_회사는_이렇게_개발해요.md
+++ b/2019/0804/0804_안드로이드_컨퍼런스우리_회사는_이렇게_개발해요.md
@@ -1,15 +1,15 @@
 # [안드로이드 컨퍼런스]우리 회사는 이렇게 개발해요
 
-![[안드로이드 컨퍼런스]우리 회사는 이렇게 개발해요](image.jpg)
+![[안드로이드 컨퍼런스]우리 회사는 이렇게 개발해요](image.png)
 
 - ⏰ 일시 : 2019. 08. 04 (일)
 - 💁 주최 : 박상권
-- ⛳ 장소 : 
-- 🔗 링크 : 
+- ⛳ 장소 : 마루180
+- 🔗 링크 : https://event-us.kr/ted/event/8421
 
 ## 👏 총평 
 
-- ㅁ
+- 
 
 ## 📸 인증샷
 
