✍️ 2018.12.15 OSS 개발자 포럼 상세메모 추가

--- a/2018/1215/1215_OSS개발자포럼_개발자_경력관리_멘토링_개발자로_살아남는_법.md
+++ b/2018/1215/1215_OSS개발자포럼_개발자_경력관리_멘토링_개발자로_살아남는_법.md
@@ -17,3 +17,57 @@
 ![인증샷](self.png)
 
 > 빨간 화살표가 나다.
+
+## 📝 메모
+```
+권문범
+ 기회는 누구에게나 오지만 누구나 기회를 갖진 않는다.
+
+ 프로파일링은 꼭 해보자
+
+ 만든것은 성과가 아니다. -> 어떻게 만들었는가 왜 만들었는가
+ : 성능향상을 했으면 어떻게 성능향상을 시켰는지에 대해서 적는다.
+ : 코딩철학 (답이 없음)
+ 본인 참여율 (%든 뭐든 )
+
+지원이력이 남는다. ->
+: 우선순위가 높은 회사는 신중하게 지원하고,
+: 우선순위가 낮은 회사는 여러번 지원한다.
+
+이력서:
+Linked-in을 통해 헤드헌터들과 접촉 :
+영문이력서도 작성
+여러곳에 탈락한 곳과 통과한 곳을 비교한다.
+분기별로 이력서
+
+하지말 것
+- 세상을 구하는 개발자가 되지 마라 : 아직은 아님
+- '을'행세를 한다 : 비굴해지지 말자
+- 경력이 깡패다 : 연차에 맞는 기술력을 갖춘다는 전제
+
+면접
+- 면접은 소개팅과 마찬가지다
+- 인사, 소개, 질문 순
+- 잘한다보단 무엇을 했다가 중요하다
+- 개발실력 자랑보다 그것을 이용한 성과
+- 나대는 사람을 싫어한다.
+- 메모리 관리, 예외 처리에 대해 '왜' 했는지
+
+면접에 질문하라
+- 팀 문화, 협력도, 인원수
+- OS, 개발환경, 플랫폼
+- 형상관리, 이슈관리
+- 면접을 다니면서 정보를 축적한다.
+
+이력서는 항상 최신화
+
+제품 꼭을 꼭 써보자 : (앱 분석을 한번쯤 해보는게 좋지 않을까?)
+
+오픈소스
+
+무엇이 제일 중요할까?
+Have you opened open source?
+
+어느정도 알아야 오픈소스를 다뤄봤다고 말할 수 있는가?
+-> 왜 그런가? 에 대해 대답이 가능해야 한다.
+```
