✍️ 2019.08.04 안드로이드 우회이개 메모 추가

--- a/2019/0804/0804_안드로이드_컨퍼런스우리_회사는_이렇게_개발해요.md
+++ b/2019/0804/0804_안드로이드_컨퍼런스우리_회사는_이렇게_개발해요.md
@@ -9,8 +9,191 @@
 
 ## 👏 총평 
 
+- 경력이 짧은 나로서는 다른 회사들의 개발프로세스를 알 방법이 없었는데, 그런 의미에서 다른 회사들은 어떻게 일하는지 무엇을 중요하게 생각하는지 엿볼 수 있는 좋은 기회였다고 생각한다.
+
+## 0. 키노트 및 회사 소개
+
+### 메모
+```
+
+* 생각
+
+- 회사를 어필할 땐
+서비스 설명, 성장속도와 가능성, 회사의 특성과 장점
+회사도 깃헙을 보여줄 수 있다.
+
+- 스크럼, 스프린트, KPT에 대해 찾아보자
+비개발자에게도 설명할 수 있는
+
+- 새로운 기술스택, 아키텍쳐를 도입하기 위해
+교육프로젝트를 가장한 실험프로젝트를 만들어 본다.
+
+- 기술스택을 테이블로 만들어서 순서대로 교육
+git,
+
+- 정책 소개
+유저정책, 결제정책 등 주요정책
+
+- 퇴사스택 관리
+업무 조율간에 스택을 쌓는것으로 상대를 설득.
+스택이 쌓이면 퇴사신청 가능
+스택을 연봉, 상여금, 휴가로 교환
+
+```
+
+## 1. 빠른 안드로이드 개발에 대한 프로세스
+
+- 🎤 발표자 : 하동현 힐링페이퍼(강남언니)
+
+### 메모 
+
+```
+커뮤니케이션
+슬랙 - 개발자만?,  -> 전직원 슬랙
+슬랙 활용 가이드를 만든다.
+
+업무요청은 공개 - 중복 요청을 뺀다
+
+컨플루언서
+문서관리를 효율적으로 하기 위해₩
+어렵고 느림
+-> 노션 수정
+
+노션
+마크다운 지원, 체크리스트, 카테고리별 분류 등 여러가지 간편한 기능
+러닝커브가 적음
+
+자리배치
+
+스크럼, 스프린트 적용
+
+KPT
+keep problem try
+스프린트 당 KPT를 통해 방향 제시
+
+6개월 스냅샷
+- 6개월 뒤의 우리는 무엇을 해냈는가?
+- 스냅샷을 통해 나온 리스트를
+
+회의
+- 관련 실무자만, 최소시간
+- 회의를 길게한다고 해서 좋은 결과가 나오지 않음
+
+제플린
+- 전에 프리핸드
+
+리햅
+- 6주동안 쌓인 기술부채를
+- 기술블로그 운영
+
+MVP 아키텍쳐
+- 로직변화가 적을 Presenter 우선 개발
+- 디자인 최종 확전 전까지 view 를 개발하지 않는다.
+
+함수형프로그래밍
 - 
 
-## 📸 인증샷
+```
 
-![인증샷](self.png)
+## 2. 카카오페이 안드로이드 개발자로 일하기
+
+- 🎤 발표자 : 권태환 카카오페이
+
+### 메모 
+
+```
+카카오와 카카오페이에 공종해야 하므로 공통 모듈을 개발
+
+100%코틀린, MVVM, 클린아키텍쳐, 모듈
+도메인 레이어를 분리하기 위해 클린아키텍쳐 적용
+Epoxy, 코루틴,
+
+코루틴 - Rx에서 실수가 많이 나는 경우
+초반에는 쉽게 배우지만, 에러처리가 어려워 진다.
+
+모듈에는...
+공통의 Prefix를 정의
+각각 앱에서 가지는 디펜던시는 적용하지 않는다.
+클린아키텍쳐 기반의 적용
+
+시간과 장소에 구애받지않고 이야기한다.
+실험적인 기술은 언제나 도전한다.
+어느정도 팀에서 안정화 되면 공유한다.
+
+인턴 교육과정
+
+소통
+"아지트"를 사용
+
+깃헙으로 소스코드 관리
+지라
+
+```
+
+## 4. 서로를 성장시키는 질문
+
+- 🎤 발표자 : 노현석 네이버 크로바
+
+### 메모 
+
+```
+크로바 AI
+
+아키텍쳐 패턴 왜?
+
+64비트 작업 왜?
+
+이렇게 작업하는거 불편하지 않나요?
+
+이거 왜 필요한가요?
+
+->> 비개발자에게 설명해야 한다.
+
+아키텍쳐
+- 본질에 초점을 맞춰야 한다.
+
+64비트
+-
+
+작업
+- 사람이 바뀌면 다양하게 바뀜
+- 사람이 바뀔때마다 바뀌어야 할 필요성이 있다.
+- 왜? 가 중요하다.
+
+의미, 이유, 성장 세가지에 키워드에 초점을 맞추는게
+
+질문
+본질을 묻는가? 단순 취향인가? 의도가 무엇인가? 순수한 궁금증인가?
+SOLID
+
+Refactoring 을 통해 질문하기 쉬운 단계
+
+틀려도 괜찮으니 꼭 질문과 대답을 하자 -> 질문,대답을 못하고 안하는것이 가장 무서운 것
+질문은 불확실해도, 대답은 확실해야 한다.
+
+```
+
+## 5. 헤이딜러에서는 어떻게 일하나요?
+
+- 🎤 발표자 : 박상권 PRND
+
+### 메모 
+
+```
+피쳐별 내용 공유
+
+제플린
+
+스타일 가이드
+
+제플린 컴포넌트
+
+PR도 템플릿
+
+모든것을 템플릿으로 만든다.
+이슈별로 라벨을 만든다.
+PR별로 라벨을 달아서 어떤 상태인지 (리뷰가 필요한지, 머지가 필요한지) 확인할 수 있게 한다.
+
+소나큐브를 이용하여 정적분석을 먼저 돌린다.
+
+```
