✍️ FEConf 총평 추가

--- a/2018/1103/1103_FEConf_2018.md
+++ b/2018/1103/1103_FEConf_2018.md
@@ -4,12 +4,12 @@
 
 - ⏰ 일시 : 2018. 11. 03 (토)
 - 💁 주최 : 프론트엔드개발 그룹
-- ⛳ 장소 : 
-- 🔗 링크 : 
+- ⛳ 장소 : 롯데타워 31층 SKY 31 컨벤션 
+- 🔗 링크 : https://festa.io/events/90
 
 ## 👏 총평 
 
-- ㅁ
+- 주력분야가 아닌 FE쪽의 동향과 트렌드를 엿볼 수 있었던 행사
 
 ## 📸 인증샷
 
